Sat May 21 00:55:21 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/zlib/zlib.c (gzfile_check_footer): ISIZE (Input SIZE) in gzip's
	header is the size of uncompressed input data modulo 2^32.
	[ruby-core:34481] http://www.ietf.org/rfc/rfc1952.txt

Fri May 20 23:46:44 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/{getaddrinfo,getnameinfo}.c: include winsock2.h only when
	  specified to use winsock2 by user.
	  this problem is reported by kosaki.

Fri May 20 23:23:45 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/socket.c (make_addrinfo): skip IPv6 addresses when ruby
	  doesn't support IPv6 but system supports it.
	  [ruby-dev:42944] (#4230)

Fri May 20 23:10:07 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/README.win32: note to need NT based OS to build ruby.

	* win32/{configure.bat,setup.mak}: backport current build method from
	  trunk. [ruby-dev:42893] (#4206)

Fri May 20 23:06:31 2011  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* Backported the fix at
	  Mon Sep 13 09:23:58 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/openssl/ossl_bn.c (ossl_bn_is_prime): fix comparison
	  with rb_scan_args. Before this fix, OpenSSL::BN#prime?
	  is fully broken.

Fri May 20 23:06:31 2011  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* Backported the fix at
	  Mon Oct  4 09:30:42 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/openssl/lib/openssl/bn.rb (Integer#to_bn): OpenSSL::BN.new
	  accepts only Strings, so call Integer#to_s(16).
	  16 is for an optimization. [ruby-dev:42336]

Fri Feb 18 21:18:55 2011  Shugo Maeda  <shugo@ruby-lang.org>

	* test/ruby/test_exception.rb (TestException::test_to_s_taintness_propagation):
	  Test for below.

Fri Feb 18 21:18:55 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* error.c (exc_to_s): untainted strings can be tainted via
	  Exception#to_s, which enables attackers to overwrite sane strings.
	  Reported by: Yusuke Endoh <mame at tsg.ne.jp>.

	* error.c (name_err_to_s): ditto.
