@@ -1447,7 +1447,7 @@ ruby_float_step(from, to, step, excl)
 
 	if (err>0.5) err=0.5;
 	n = floor(n + err);
-	if (!excl) n++;
+	if (!excl || ((long)n)*unit+beg < end) n++;
 	for (i=0; i<n; i++) {
 	    rb_yield(rb_float_new(i*unit+beg));
 	}
